# bagel

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  main.go
examples/attributes/: BUILD.bagel  foo.bzl
examples/dependencies/: BUILD.bagel  file.cc.tpl  foo.bzl
examples/empty/: BUILD.balez
examples/prints/: BUILD.balez  foo.bzl
examples/write/: foo.bzl
graveyard/cache/: BUILD.bazel  disk_cache.go  disk_cache_example_test.go  leaf_refs.go  strings.go
graveyard/cache/graph/: BUILD.bazel
graveyard/cmd/: BUILD.bazel  main.go
graveyard/refs3/: BUILD.bazel  atom.go
graveyard/task/: BUILD  context.go  task.go
graveyard/task2/: BUILD.bazel  refs_test.go
internal/: BUILD  BUILD.bazel  main.go  test.bzl
internal/cache/: BUILD.bazel  disk_cache.go  disk_cache_example_test.go  generics.go  global_context.go  packed_refs.go  strings.go
internal/cache/graph/: BUILD.bazel  graph.capnp
internal/dcache/: BUILD.bazel  dcache.go  disk_cache.go  disk_cache_example_test.go  file.go
internal/dcache/books/: BUILD.bazel  books.capnp.go
internal/dcache/graph/: BUILD.bazel  graph.capnp  graph.capnp.go
internal/labels/: BUILD.bazel  labels.go
internal/refs/: BUILD.bazel  core.go  generics.go  refs.go  strings.go
internal/refs2/: BUILD.bazel  core.go  generics.go  refs2.go  strings.go
internal/starlark_tasks/: BUILD  BUILD.bazel  actions.go  configured.go  ctx.go  depset.go  evaluation.go  files.go  read_file.go  rule.go  test.bzl
internal/task/: BUILD  BUILD.bazel  context.go  id.go  task.go  task1.go  task_test.go
lib/: BUILD  main.go
lib/analysis/: BUILD.bazel  README.md  actions.go  bzlActions.go  bzlAttr.go  bzlContext.go  ctx.go  evaluation.go  files.go  helpers.go  tasks.go
lib/bzl/: builtin_struct.go  evaluation.go  provider.go  read_file.go
lib/cache/: BUILD.bazel  disk_cache.go  global_context.go  packed_refs.go  strings.go
lib/cache/graph/: BUILD.bazel  graph.capnp
lib/core/: BUILD.bazel  context.go  interning.go  interning_test.go  memfunc.go  memfunc_test.go  task.go  task_test.go
lib/execution/: BUILD.bazel  README.md  tasks.go
lib/labels/: BUILD.bazel  labels.go
lib/loading/: BUILD  README.md  bzlAttr.go  bzlDepset.go  bzlProvider.go  bzlRule.go  bzlStruct.go  helpers.go  read_file.go  rule.go  tasks.go
lib/metagraph/: BUILD.bazel  context.go  interning.go  interning_test.go  memfunc.go
lib/refs/: BUILD.bazel  config.go  filesystem.go  labels.go  parsers.go  parsers_test.go
lib/refs3/: BUILD.bazel  basic_test.go  cache.go
lib/starlark_tasks/: BUILD  ctx.go  evaluation.go  files.go  provider.go  read_file.go  rule.go
lib/storage/: BUILD.bazel  mmap.go  shmem.go  shmem_test.go  typed_mmap.go
lib/task/: BUILD  context.go  id.go  task.go  task_test.go
lib/task2/: BUILD.bazel  context.go  generic_refs.go  refs.go
tools/: BUILD  go.sh  go_wrapper.bash  gopackagesdriver.sh
