"""
Define the third-party dependencies using bzlmod syntax.
"""
bazel_dep(name = "rules_go", version = "0.43.0")
bazel_dep(name = "gazelle", version = "0.34.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture.
go_sdk.download(version = "1.20.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "net_starlark_go",
)
