load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/HALtheWise/bagel/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/cache",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
