load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "disk_cache.go",
        "global_context.go",
        "leaf_refs.go",
        "packed_refs.go",
        "strings.go",
    ],
    importpath = "github.com/HALtheWise/bagel/graveyard/cache",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_halthewise_bagel//lib/cache/graph:go_default_library",
        "@com_zombiezen_go_capnproto2//:go_default_library",
    ],
)

go_test(
    name = "cache_test",
    srcs = ["disk_cache_example_test.go"],
    deps = [
        "@com_github_halthewise_bagel//lib/cache/graph:go_default_library",
        "@com_zombiezen_go_capnproto2//:go_default_library",
    ],
)
