load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "refs3",
    srcs = [
        "atom.go",
        "cache.go",
    ],
    importpath = "github.com/HALtheWise/bagel/graveyard/refs3",
    visibility = ["//visibility:public"],
)

go_test(
    name = "refs3_test",
    srcs = ["basic_test.go"],
    deps = ["@com_github_halthewise_bagel//lib/refs3:go_default_library"],
)
