load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dcache_lib",
    srcs = ["disk_cache.go"],
    importpath = "github.com/HALtheWise/bales/internal/dcache",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/dcache/graph",
        "@com_zombiezen_go_capnproto2//:go_default_library",
    ],
)

go_test(
    name = "dcache_test",
    srcs = ["disk_cache_example_test.go"],
    deps = [
        "//internal/dcache/graph",
        "@com_zombiezen_go_capnproto2//:go_default_library",
    ],
)
