load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "refs2",
    srcs = [
        "core.go",
        "generics.go",
        "strings.go",
    ],
    importpath = "github.com/HALtheWise/bagel/internal/refs2",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/dcache:dcache_lib",
        "//internal/dcache/graph",
    ],
)
