load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "analysis",
    srcs = [
        "bzlActions.go",
        "bzlAttr.go",
        "bzlContext.go",
        "files.go",
        "helpers.go",
        "tasks.go",
    ],
    importpath = "github.com/HALtheWise/bagel/lib/analysis",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/core",
        "//lib/loading",
        "//lib/refs",
        "@net_starlark_go//starlark:go_default_library",
    ],
)
