load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "context.go",
        "interning.go",
        "memfunc.go",
    ],
    importpath = "github.com/HALtheWise/bagel/lib/core",
    visibility = ["//visibility:public"],
)

go_test(
    name = "core_test",
    srcs = [
        "interning_test.go",
        "memfunc_test.go",
    ],
    deps = [":core"],
)
