load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "execution",
    srcs = ["tasks.go"],
    importpath = "github.com/HALtheWise/bagel/lib/execution",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/analysis",
        "//lib/core",
        "//lib/loading",
        "//lib/refs",
    ],
)
