load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "refs",
    srcs = [
        "filesystem.go",
        "labels.go",
        "parsers.go",
    ],
    importpath = "github.com/HALtheWise/bagel/lib/refs",
    visibility = ["//visibility:public"],
    deps = ["//lib/core"],
)
