load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "refs",
    srcs = [
        "config.go",
        "filesystem.go",
        "labels.go",
        "parsers.go",
    ],
    importpath = "github.com/HALtheWise/bagel/lib/refs",
    visibility = ["//visibility:public"],
    deps = ["//lib/core"],
)

go_test(
    name = "refs_test",
    srcs = ["parsers_test.go"],
    deps = [
        ":refs",
        "//lib/core",
    ],
)
